# 2d-mesh-scratch

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  fast_test.sh  index.html  log  main.py  mesh_box.sh  requirements.txt  setup.sh  test_script.sh
src/: annealing.rs  delaunay.rs  elements.rs  generation.rs  geometry.rs  lib.rs  main.rs  mesh.rs  mesher.rs  paving.rs
test/: Cargo.toml
test/src/: generation.rs  geometry.rs  lib.rs
test2/: index.html  js_mesher.mthml  test_mesher.py
test2/src/: lib.rs
test_fluid_2/: Cargo.toml  build.sh  example.html  make_deployment.sh  run_server.py
test_fluid_2/js/: controls.js  emitters.js  renderer.js
test_fluid_2/src/: fluid.rs  lib.rs
