[package]
name = "rust_mesher"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "mesher"
path = "src/main.rs"

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
delaunator = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1.0"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "Document",
  "Element",
  "HtmlElement",
  "HtmlCanvasElement",
  "CanvasRenderingContext2d",
  "Window",
]

[package.metadata.wasm-pack.profile.release]
wee-alloc = false